[gd_scene load_steps=2 format=2]

[ext_resource path="res://menu.gd" type="Script" id=1]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -200.0
margin_right = 200.0
margin_bottom = 100.0
text = "ProjectMinigolf"
align = 1
valign = 1

[node name="ListPlayers" type="ItemList" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -150.0
margin_right = 300.0
margin_bottom = 150.0
rect_clip_content = false

[node name="ButtonRemove" type="Button" parent="ListPlayers"]
anchor_left = 1.0
anchor_right = 1.0
margin_top = 1.0
margin_right = 75.0
margin_bottom = 25.0
text = "Remove"

[node name="TextName" type="TextEdit" parent="ListPlayers"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 25.0
margin_right = -25.0
margin_bottom = 25.0

[node name="ButtonAdd" type="Button" parent="ListPlayers/TextName"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -50.0
text = "Add"

[node name="ButtonPlay" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -30.0
margin_top = -20.0
margin_right = 30.0
margin_bottom = 20.0
text = "Start game"

[node name="ListMaps" type="ItemList" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -150.0
margin_bottom = 150.0
